new-vector-fixed-pagetools.user.css
/* ==UserStyle==
@name        Wikim V.2022 Fixed Page Toolbar
@namespace   StylishThemes
@version     1.0.11
@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-fixed-pagetools.user.css
@license     CC-BY-SA-4.0
@author      quiddity-wp

==/UserStyle== */
@-moz-document domain("wikipedia.org"),
domain("meta.wikimedia.org"),
domain("office.wikimedia.org"),
domain("collab.wikimedia.org"),
domain("commons.wikimedia.org"),
domain("species.wikimedia.org"),
domain("outreach.wikimedia.org"),
domain("wikimania.wikimedia.org"),
domain("foundation.wikimedia.org"),
domain("wikitech.wikimedia.org"),
domain("wiktionary.org"),
domain("mediawiki.org"),
domain("wikisource.org"),
domain("wikivoyage.org"),
domain("wikibooks.org"),
domain("wikinews.org"),
domain("wikiversity.org"),
domain("wikiquote.org"),
domain("wikidata.org"),
domain("beta.wmflabs.org"),
domain("wikifunctions.org") {
/* NOTE: this assumes you are using my Whitespace CSS, and using Left-to-Right languages in NEW VECTOR ([[mw:Desktop Improvements]] beta) */
  
/* Hide the custom page-toolbar from my Whitespace CSS */
.vector-sticky-header-end {
  display: none !important;
}

/* Sticky the page-toolbar, and adjust its width (TODO: Fix imperfect width...) */
.vector-page-toolbar, 
.vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar  {
  position: fixed !important; 
  top: 55px; 
  background-color: white; 
  z-index: 1 !important;
  right: 1px;
  margin-left: -2px
}
@media screen and (min-width: 1000px) {
  .vector-page-toolbar {
    width: calc(100% - 285px);
  }
  .vector-page-toolbar, 
  .vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
    margin: 0 5px 0 10px;
  }
}
@media screen and (max-width: 999px) and (min-width: 300px) {
  .vector-page-toolbar {
    width: 95vw; left: 10px;
  }
}
.vector-feature-zebra-design-disabled .vector-dropdown .vector-dropdown-content {
  padding: 0 !important;
}
.vector-page-toolbar-container .vector-dropdown {
  height: 27px;
}
input:focus:not(:active) + .cdx-button:not(.cdx-button--action-progressive) {
  box-shadow: unset;
}

/* Still show it in thinner windows */
@media screen and (min-width: 300px) {
  .vector-page-toolbar .mw-portlet-views:not(.emptyPortlet) {
    display: block;
  }
}

/* Move button for ToC-collapsed down below the sticky-header */
.client-js .vector-below-page-title .vector-page-titlebar-toc {
  top: 81px !important;
}
html {
  scroll-padding-top: 120px !important;
}

/* Nudge content down to account for no-default gap */
.vector-feature-zebra-design-disabled .mw-content-container,
.mw-content-container {
  padding-top: 25px !important;
}
@media screen and (max-width: 999px) {
  .vector-feature-zebra-design-disabled .mw-page-container {
    padding-top: 55px;
  }
  #pt-talk-alert {
    margin-top: 10px !important;
  }
}

/* Fix for VE toolbar */
body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
  top: 76px;
}

/* Fix for overlapping hidden div, otherwise interferes w/ VE */
#p-views,
#p-views .vector-menu-content {
  max-height: 20px;
}

/* Fix for sticky table-header gadgets */
.jquery-tablesorter > thead,
.mw-sticky-header > thead {
    position: -webkit-sticky;
    position: sticky;
    top: 80px !important;
}

/* Fix overlap of personal-tools */
#vector-user-links-dropdown .vector-menu-content {
  top: 40px;
}
.mw-page-container {
  z-index: unset !important;
}

/* Nudge "new talk" down */
#pt-talk-alert {
  top: 65px !important;
}

/* Remove bottom-border */
.vector-feature-zebra-design-disabled .vector-sticky-header-container {
  border-bottom: unset;
}

/* Fix sitenotice margin */
#siteNotice {
  top: 25px;
}

/* Fix sticky table-headers */
.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .mw-sticky-header-element {
  top: 80px !important;
}

/* Stop the pinned page-tools menu from jumping on scroll */
.vector-feature-zebra-design-disabled #vector-page-tools-pinned-container .vector-page-tools {
  padding-top: unset;
}
.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled.vector-feature-page-tools-pinned-enabled .vector-page-tools-landmark {
  top: 85px !important;
  margin-top: -10px;
}
  
/* Grey Sticky Headers  */
.mw-header {
  background-color: #f8f9fa !important; /* or a bit darker: #eaecf0 */
  border-bottom: 1px solid #eaecf0 !important;
}
.vector-page-toolbar, 
.vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
  background-color: #f8f9fa !important;
  border-bottom: 1px solid #a2a9b1 !important;
/*  border-right: 1px solid #a2a9b1 !important; */
}
#p-associated-pages {
  background-color: #f8f9fa !important;
  border-left: 1px solid #a2a9b1 !important;
  padding-bottom: 0;
/*  border-bottom: 1px solid #a2a9b1 !important; */
  max-height: 27px;
}
.vector-page-toolbar-container {
  box-shadow: unset;
}

/* Tweak Site-logo design */
.mw-logo-icon {
  display: block;
  background: white !important;
  padding: 2px 4px;
  border-left: 1px solid #eaecf0;
  border-right: 1px solid #eaecf0;
  border-top: unset;
  margin-left: -5px;
}

/* Replace toolbar text with icons at small widths */
@media screen and (max-width: 699px) {
  #ca-addsection {
    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px; width: 10px; font-size: 1px; color: white; text-decoration: none;
  }
  #ca-view {
    display: none;
  }
  #ca-view-foreign > a {
    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-wikimedia&image=logoMetaWiki&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-wikimedia&image=logoMetaWiki&format=original) no-repeat 0 0/15px; background-color: #26ae45; padding: 10px; width: 10px; font-size: 1px; color: white; text-decoration: none;
  }
  #ca-ve-edit > a {
    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
  }
  #ca-edit > a {
    -webkit-mask: url(g/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px 10px; font-size: 1px; color: white; text-decoration: none;
  }
  #ca-viewsource > a {
    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
  }
  #ca-history > a {
    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
  }
  #ca-wikilove {
    padding: 0 5px 0 0;
  }
/* Fix mislaigned icons */
  #ca-wikilove > .mw-ui-button {
    margin-top: 1px !important;
  }
  #ca-view-foreign,
  #ca-ve-edit,
  #ca-edit,
  #ca-viewsource,
  #ca-history {
    margin-top: 5px !important;
  }
  #ca-addsection {
    margin-top: 8px;
  }
  #ca-watch,
  #ca-unwatch {
    margin-top: -3px !important;
  }
}

}

